probowanie 3 sposobu z zustandem

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,9 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "noUncheckedIndexedAccess": true
+    "noUncheckedIndexedAccess": true,
+    "downlevelIteration": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.cjs", "**/*.mjs", "src/pages/your-requests.tss"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.cjs", "**/*.mjs", "src/pages/your-requests.tss", "src/components/RequestBar/RequestNotifications.tss"],
   "exclude": ["node_modules"]
 }
