--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-auth": "~4.10.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.0.8",
     "superjson": "1.9.1",
     "zod": "^3.18.0",
     "zustand": "^4.1.1"
