--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "12.3.1",
     "next-auth": "~4.10.2",
     "react": "18.2.0",
+    "react-animate-height": "^3.0.4",
     "react-dom": "18.2.0",
     "react-toastify": "^9.0.8",
     "superjson": "1.9.1",
